# cuber_rust_ga

./: 02_12_2022_Run.csv  Cargo.toml  CuRFB_3state.m  ParameterValues.txt  PlotData.m  RC_load_first_order.asc  README.md  WouterCellData.csv  battery.csv  batterydata.csv  best_result.csv  csvhead.txt  fitness.csv  last_generation.csv  newOGmem.csv  plot_fitness.m  postprocess.m  process_diffusioncell_test.m  process_shortstack_test.m  process_singlecell_test.m
src/: curfb_electrochem.rs  main.rs  main.rs_230305.7z
