[package]
name = "Genetic_Algorithm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
close-file = "0.1.0"
csv = "1.2.0"
nd_array = "0.1.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde ={version = "1.0.152" ,features = ["derive"]}
